Basic design for big screen

--- a/index.html
+++ b/index.html
@@ -3,13 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Shoe</title>
 </head>
 <body>
-    
+    <div class="black"></div>
+    <section id="nav">
+        <div class="nav">
+           <div class="logo">
+               <img src="./images/nlogo.png" alt="logo">
+            <h1>Shoe.</h1>
+            </div>
+            <div class="navlist">
+                <ul>
+                    <li>men <i class="fas fa-chevron-down"></i></li>
+                    <li>women <i class="fas fa-chevron-down"></i></li>
+                    <li>kids <i class="fas fa-chevron-down"></i></li>
+                    <li>customize</li>
+                </ul>
+            </div>
+            <div class="icons">
+                <i class="fas fa-shopping-cart"></i>
+                <i class="fas fa-search"></i>
+            </div>
+        </div>
+    </section>
 
+
+    <section id="main">
+        
+            <div class="shoe">
+                <div class="round_bg">
+                <img src="./images/lebron.png" alt="shoe">
+            </div>
+            </div>
+
+        <div class="description">
+            <h2>
+                Basketball shoe
+            </h2>
+            <h1>
+                LeBron 16
+            </h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum assumenda mollitia maiores praesentium tempore velit repudiandae consequatur, expedita error deserunt!
+            </p>
+            <button>Shop now</button>
+            <div class="images">
+                <img src="./images/l1.jpg" alt="shoe">
+                <img src="./images/l2.jpg" alt="shoe">
+                <img src="./images/l3.jpg" alt="shoe">
+                <img src="./images/l4.jpg" alt="shoe">
+                <i class="fas fa-long-arrow-alt-left fa-2x"></i>
+                <i class="fas fa-long-arrow-alt-right fa-2x"></i>
+            </div>
+        </div>
+
+        <div class="faded">
+            <h1>LeBron 16</h1>
+        </div>
+    </section>
 
 
 </body>
