Update overflow and image shadow

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         
             <div class="shoe">
                 <div class="round_bg">
+                    <div class="shadow"></div>
                 <img src="./images/lebron.png" alt="shoe">
             </div>
             </div>
