--- a/index.html
+++ b/index.html
@@ -32,13 +32,16 @@
     </section>
 
 
-    <section id="main">
+    <section id="main" class="main">
         
             <div class="shoe">
                 <div class="round_bg">
-                    <div class="shadow"></div>
-                <img src="./images/lebron.png" alt="shoe">
-            </div>
+                    <div class="shadow">
+                    </div>
+                    <div class="img">
+                        <img src="./images/lebron.png" alt="shoe">
+                    </div>
+                </div>
             </div>
 
         <div class="description">
